--- a/app/src/main/res/layout/item_unit.xml
+++ b/app/src/main/res/layout/item_unit.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="activity"
-            type="com.example.falconbrick.model.ActivityUnit" />
+            type="com.falconbrick.model.ActivityUnit" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -18,6 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="8dp"
+            app:cardElevation="@dimen/cardview_default_elevation"
             app:layout_constraintEnd_toStartOf="@+id/empty_text"
             app:layout_constraintStart_toEndOf="@+id/empty_text"
             app:layout_constraintTop_toTopOf="parent">
